# cut6_torus

./: .gitignore  CMakeLists.txt  README.md  check.hpp  checkall.sh  main.cpp
